# bookmark-interview

./: .gitignore  QUICKSTART.md  README-REPLIT.md  README.md  pyproject.toml  run.sh  setup.sh
backend/: BUGS.md  requirements.txt
backend/bookmarks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/users/: admin.py  models.py  serializers.py  views.py
frontend/: BUGS.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/bookmarks/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AddBookmarkForm.tsx  BookmarkCard.tsx  BookmarkList.tsx  Navbar.tsx
frontend/src/types/: index.ts
